syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ApplicantEducation{

rpc ReadApplicantEducation (ApplicantEducationIdRequest) returns (ApplicantEducationPayload);
rpc GetAllApplicantEducation (google.protobuf.Empty) returns (AllApplicantEducationPayload);
rpc CreateApplicantEducation (ApplicantEducationPayload) returns (google.protobuf.Empty);
rpc UpdateApplicantEducation (ApplicantEducationPayload) returns (google.protobuf.Empty);
rpc DeleteApplicantEducation (ApplicantEducationPayload) returns (google.protobuf.Empty);

}

message ApplicantEducationIdRequest{
	string Id = 1;
}

message ApplicantEducationPayload{
	string Id = 1;
	string Applicant = 2;
	string Major = 3;
	string CertificateDiploma = 4;
	google.protobuf.Timestamp StartDate = 5;
	google.protobuf.Timestamp CompletionDate = 6;
	int32 CompletionPercent = 7;

}

message AllApplicantEducationPayload{
	repeated ApplicantEducationPayload ApplicantEducations = 1;
}